[gd_scene load_steps=4 format=3 uid="uid://banlvpn7x3foq"]

[ext_resource type="Script" uid="uid://n33rcmmpxbbm" path="res://mob/robot_02.gd" id="1_t3oxr"]
[ext_resource type="PackedScene" uid="uid://qlcs4q5ng4ie" path="res://mob/bat/robot_02.tscn" id="2_yg81d"]

[sub_resource type="SphereShape3D" id="SphereShape3D_t3oxr"]

[node name="robot02" type="RigidBody3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
gravity_scale = 0.0
script = ExtResource("1_t3oxr")

[node name="robot02" parent="." instance=ExtResource("2_yg81d")]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.226732, 0)
shape = SubResource("SphereShape3D_t3oxr")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true

[node name="KOSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
